Fixed facebook posts overflowing.

--- a/frontend/src/assets/styles/cmps/content/main-content/_MainContent.scss
+++ b/frontend/src/assets/styles/cmps/content/main-content/_MainContent.scss
@@ -51,7 +51,7 @@
     div,
     iframe,
     span {
-      max-width: 100%;
+      max-width: 100vw;
     }
   }
 
